unpackaged/main/default/objects/adobesign__Document_Template__c/adobesign__Document_Template__c.object-meta.xml
<CustomObject>
    <description>Document Templates allow you to predefine merge data fields for documents.</description>
    <label>Document Builder Template</label>
    <nameField>
        <displayFormat>DCT-{0}</displayFormat>
        <label>Document Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Builder Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>