unpackaged/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Active__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A flag indicates if a document template is active for use or not.</description>
    <inlineHelpText>A flag indicates if a document template is active for use or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>