unpackaged/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Last_Modified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Last_Modified_DateTime__c</fullName>
    <formula>DATETIMEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>