unpackaged/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Object_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Object_Field_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field for Object Field Mapping record</description>
    <label>Object Field Mapping</label>
    <referenceTo>adobesign__Object_Field_Mapping__c</referenceTo>
    <relationshipLabel>Document Builder Templates</relationshipLabel>
    <relationshipName>Contract_Builder_Templates_ObjectMapping</relationshipName>
    <type>Lookup</type>
</CustomField>