unpackaged/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Output_File_Format__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Output_File_Format__c</fullName>
    <description>Output file format</description>
    <inlineHelpText>Output file format. PDF and DOCX are supported.</inlineHelpText>
    <label>Output File Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pdf</fullName>
            </value>
            <value>
                <fullName>docx</fullName>
                <default>true</default>
                <label>docx</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>